# sqlfluff-constraint-naming

./: README.md  pyproject.toml  setup.py  test.sql
src/sqlfluff_constraint_naming/: __init__.py  rules.py
